5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1888_1657.log
== TEST (2019-07-09 16:11:26) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

if entrada[i] == CA:
	resultado = sum(entrada[CA])
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:16) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))


if entrada[i] == CA:
	resultado = sum(entrada)
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:31) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))


if entrada[i] == "CA":
	resultado = sum(entrada)
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:57) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))


if entrada[i] == "CA":
	resultado = sum(entrada)
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:13:31) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))


if entrada[i] == 'CA':
	resultado = len(entrada)
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:13:32) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))


if entrada[i] == 'CA':
	resultado = len(entrada)
	print(resultado)
-- EXECUTION TIME:
0.912238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 3, in <module>
    enrada = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:07) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:07) 
-- CODE:
from numpy import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:57) 
-- CODE:
from numpy import *

enrada = array(eval(input.split("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:17:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input.split("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:17:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(split(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(split(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval.split(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(input("Informe as pessoas de cada Estado: "))).split

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(input("Informe as pessoas de cada Estado: "))).split()

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'CA':
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == split('CA'):
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == split("CA"):
	valor = sum(entrada[CA])
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:19:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = certo
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(input("Informe as pessoas de cada Estado: ")))

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = 2
	print(valor)

-- ERROR:
File "XXXX", line 6
    AZ = 0
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array((eval(input("Informe as pessoas de cada Estado: ")))

#AZ = 0
#CA = 0
#FL = 0
#PA = 0
#WI = 0

if entrada[i] == "CA":
	valor = 2
	print(valor)

-- ERROR:
File "XXXX", line 12
    if entrada[i] == "CA":
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

#AZ = 0
#CA = 0
#FL = 0
#PA = 0
#WI = 0

if entrada[i] == "CA":
	valor = 2
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

#AZ = 0
CA = 0
#FL = 0
#PA = 0
#WI = 0

if entrada[i] == "CA":
	valor = 2
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

#AZ = 0
CA = 0
#FL = 0
#PA = 0
#WI = 0

if entrada[i] == 'CA':
	valor = 2
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

AZ = 1
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "AZ":
	valor = AZ + 1
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))

AZ = 1
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "AZ":
	valor = sum(entrada["AZ"])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(split("Informe as pessoas de cada Estado: ")))

AZ = 1
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "AZ":
	valor = sum(entrada["AZ"])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))
vetor = entrada.split(',')

AZ = 1
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "AZ":
	valor = sum(entrada["AZ"])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 1
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "AZ":
	valor = sum(entrada["AZ"])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 1
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'AZ':
	valor = sum(entrada['AZ'])
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 1
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'AZ':
	valor = entrada['AZ']
	print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == 'AZ':
	valor = entrada['AZ']
print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = (entrada['AZ'])
elif entrada[i] == "CA":
	valor = entrada
print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:28:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

enrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = (entrada['AZ'])
elif entrada[i] == "CA":
	valor = entrada
print(valor)

-- EXECUTION TIME:
1.07662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 4, in <module>
    enrada = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:59) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada = array(eval(input("Informe as pessoas de cada Estado: ")))
#entradavetor = entrada.split(',')

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = (entrada["AZ"])
elif entrada[i] == "CA":
	valor = (entrada["CA"]
elif entrada[i] == "FL":
	
		
print(valor)

-- ERROR:
File "XXXX", line 17
    elif entrada[i] == "FL":
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = (entrada["AZ"])
elif entrada[i] == "CA":
	valor = (entrada["CA"])
elif entrada[i] == "FL":
	valor = (entrada["FL"])
elif entrada[i] == "PA":
	valor = (entrada["PA"])
elif entrada[i] == "WI":
	valor = entrada["WI"]
	
print(valor)
	
		
print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:32:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = (entrada["AZ"])
elif entrada[i] == "CA":
	valor = (entrada["CA"])
elif entrada[i] == "FL":
	valor = (entrada["FL"])
elif entrada[i] == "PA":
	valor = (entrada["PA"])
elif entrada[i] == "WI":
	valor = entrada["WI"]
	
print(valor)
	
		
print(valor)

-- EXECUTION TIME:
0.783924
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 4, in <module>
    entrada = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 0
CA = 0
FL = 0
PA = 0
WI = 0

if entrada[i] == "CA":
	valor = sum(entrada)
elif entrada[i] == "CA":
	valor = (entrada["CA"])
elif entrada[i] == "FL":
	valor = (entrada["FL"])
elif entrada[i] == "PA":
	valor = (entrada["PA"])
elif entrada[i] == "WI":
	valor = entrada["WI"]
	
print(valor)
	
		
print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada = array(eval(input("Informe as pessoas de cada Estado: ")))
entradavetor = entrada.split(',')

AZ = 1
CA = 1
FL = 1
PA = 1
WI = 1

if entrada[i] == "CA":
	valor = sum(entrada[i])
elif entrada[i] == "CA":
	valor = (entrada["CA"])
elif entrada[i] == "FL":
	valor = (entrada["FL"])
elif entrada[i] == "PA":
	valor = (entrada["PA"])
elif entrada[i] == "WI":
	valor = entrada["WI"]
	
print(valor)
	
		
print(valor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:34:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

entrada = array(eval(input("Informe as pessoas de cada Estado: ")))

valor = len(entrada)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:42) 
-- CODE:
from numpy import *

palavra = input("informe")

valor = len(palavra)
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:02) 
-- CODE:
from numpy import *

palavra = input("informe")

valor = len(palavra)
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:14) 
-- CODE:
from numpy import *

palavra = input("informe")
palavra.split(',')

if palavra[i] == "AZ":
	valor = len(palavra[i])
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:32) 
-- CODE:
from numpy import *

palavra = input("informe")
palavra.split(',')
i = 0

if palavra[i] == "AZ":
	valor = len(palavra[i])
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:38:04) 
-- CODE:
from numpy import *

palavra = input("informe")
palavra.split(',')
i = 0

if palavra[i] == "AZ":
	valor = len(palavra[i])
	print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:26) 
-- CODE:
from numpy import *

palavra = input("informe")
palavra.split(',')
i = 0

if palavra[i] == "AZ":
	valor = len(palavra[i])
	
elif palavra[i] == "CA":
	valor = len(palavra[i])
	
print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:49) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
vetor.split(',')

i = 0

if vetor[0] == "AZ":
	soma = vetor[0] + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:08) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
vetor.split(',')

i = 0

AZ = 0
CA = 0

if vetor[0] == "AZ":
	soma = vetor[0] + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:42:14) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
vetor.split(',')

i = 0

AZ = 0
CA = 0

if vetor[0] == "AZ":
	soma = vetor[0] + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1

-- EXECUTION TIME:
0.913859
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 3, in <module>
    vetor = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:15) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
vetor.split(',')

i = 0

AZ = 0
CA = 0

if vetor[0] == "AZ":
	soma = vetor[0] + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] = "WI":
	soma = vetor[4] + 1

print (soma)

-- ERROR:
File "XXXX", line 19
    elif vetor[4] = "WI":
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:26) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
vetor.split(',')

i = 0

AZ = 0
CA = 0

if vetor[0] == "AZ":
	soma = vetor[0] + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1

print (soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:49) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
vetor.split(',')

i = 0

AZ = 0
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1

print (soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:09) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
vetor.split(',')

i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1

print (soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:21) 
-- CODE:
from numpy import *

vetor = array(eval(input("informe: ")))
#vetor.split(',')

i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1

print (soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:45:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
#vetor.split(',')

i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1

print (soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:45:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
#vetor.split(',')

i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1

print (soma)

-- EXECUTION TIME:
0.876819
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 5, in <module>
    vetor = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T



i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1

print (soma)
print(vetor1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T



i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1
else:
	print(23)

print (soma)
print(vetor1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T



i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma = vetor[1] + 1
elif vetor[2] == "FL":
	soma = vetor[2] + 1
elif vetor[3] == "PA":
	soma = vetor[3] + 1
elif vetor[4] == "WI":
	soma = vetor[4] + 1
else:
	print(23)

print (soma)
print(vetor1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T



i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma[i] = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma[i] = vetor[1] + 1
elif vetor[2] == "FL":
	soma[i] = vetor[2] + 1
elif vetor[3] == "PA":
	soma[i] = vetor[3] + 1
elif vetor[4] == "WI":
	soma[i] = vetor[4] + 1
else:
	print(23)

print (soma)
print(vetor1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:48:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T



i = 0

AZ = 1
CA = 0

if vetor[0] == "AZ":
	soma[i] = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma[i] = vetor[1] + 1
elif vetor[2] == "FL":
	soma[i] = vetor[2] + 1
elif vetor[3] == "PA":
	soma[i] = vetor[3] + 1
elif vetor[4] == "WI":
	soma[i] = vetor[4] + 1
else:
	print(23)

print (soma)
print(vetor1)

-- EXECUTION TIME:
0.840014
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 5, in <module>
    vetor = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T

vetor2 = dot(inv(vetor),vetor1)
i = 0

AZ = 1
CA = 1
FL = 1
PA = 1
WI = 1

if vetor[0] == "AZ":
	soma[i] = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma[i] = vetor[1] + 1
elif vetor[2] == "FL":
	soma[i] = vetor[2] + 1
elif vetor[3] == "PA":
	soma[i] = vetor[3] + 1
elif vetor[4] == "WI":
	soma[i] = vetor[4] + 1
else:
	print(23)

print (soma)
print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:49:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T

vetor2 = dot(inv(vetor),vetor1)
i = 0

AZ = 1
CA = 1
FL = 1
PA = 1
WI = 1

if vetor[0] == "AZ":
	soma[i] = sum(vetor[0]) + 1
elif vetor [1] == "CA":
	soma[i] = vetor[1] + 1
elif vetor[2] == "FL":
	soma[i] = vetor[2] + 1
elif vetor[3] == "PA":
	soma[i] = vetor[3] + 1
elif vetor[4] == "WI":
	soma[i] = vetor[4] + 1
else:
	print(23)

print (soma)
print(vetor2)

-- EXECUTION TIME:
0.760384
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 5, in <module>
    vetor = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:54:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T

vetor2 = dot(inv(vetor),vetor1)
i = 0

AZ = 1
CA = 1
FL = 1
PA = 1
WI = 1

if vetor[i] == "AZ":
	vetor[i] = vetor[i] + 1
	resultado = sum(vetor)
elif vetor [i] == "CA":
	vetor[i] = vetor[i] + 1
elif vetor[i] == "FL":
	vetor[i] = vetor[i] + 1
elif vetor[i] == "PA":
	vetor[i] = vetor[i] + 1
elif vetor[i] == "WI":
	vetor[i] = vetor[i] + 1

print (resultado)
print(vetor2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
from math import *

vetor = array(eval(input("informe: ")))
vetor1 = vetor.T

vetor2 = dot(inv(vetor),vetor1)
i = 0

AZ = 1
CA = 1
FL = 1
PA = 1
WI = 1

if vetor[i] == "AZ":
	vetor[i] = vetor[i] + 1
	resultado = sum(vetor)
elif vetor [i] == "CA":
	vetor[i] = vetor[i] + 1
elif vetor[i] == "FL":
	vetor[i] = vetor[i] + 1
elif vetor[i] == "PA":
	vetor[i] = vetor[i] + 1
elif vetor[i] == "WI":
	vetor[i] = vetor[i] + 1

print (resultado)
print(vetor2)

-- EXECUTION TIME:
1.04027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1657/main.py", line 5, in <module>
    vetor = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'FL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
